terraform/us-east-1/c4-06-ec2bastion-elasticip.tf
# Create Elastic IP for Bastion Host
# Resource - depends_on Meta-Argument
resource "aws_eip" "bastion_eip" {
  depends_on = [module.ec2_public, module.vpc]
  instance   = module.ec2_public.id
  #vpc      = true
  domain = "vpc"
  tags   = local.common_tags
}
